fix: correct API endpoints from /api/payment to /api/payments"

--- a/public/index.html
+++ b/public/index.html
@@ -370,7 +370,7 @@
 curl https://payment-api-9g10.onrender.com/
 
 # Ödeme oluşturma örneği
-curl -X POST https://payment-api-9g10.onrender.com/api/payment/create \
+curl -X POST https://payment-api-9g10.onrender.com/api/payments/create \
   -H "Content-Type: application/json" \
   -d '{
     "amount": 150.00,
@@ -379,7 +379,7 @@ curl -X POST https://payment-api-9g10.onrender.com/api/payment/create \
   }'
 
 # Ödeme durumu sorgulama
-curl https://payment-api-9g10.onrender.com/api/payment/mock_123456789/status</code></pre>
+curl https://payment-api-9g10.onrender.com/api/payments/mock_123456789/status</code></pre>
             </div>
         </div>
     </section>
