--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
             border-radius: var(--radius);
             padding: 30px;
             box-shadow: 0 20px 40px -10px rgba(0,0,0,0.3);
+            min-height: 500px; /* Tablo uzarsa diye */
         }
 
         .header {
@@ -89,6 +90,7 @@
             margin-bottom: 25px;
             border-bottom: 2px solid #f1f5f9;
             padding-bottom: 10px;
+            overflow-x: auto; /* Mobilde taşarsa */
         }
 
         .tab {
@@ -100,6 +102,7 @@
             cursor: pointer;
             position: relative;
             transition: 0.3s;
+            white-space: nowrap;
         }
 
         .tab.active { color: var(--primary); font-weight: 600; }
@@ -206,7 +209,7 @@
         .copy-btn {
             position: absolute;
             right: 8px;
-            top: 36px; /* Label height + padding adjust */
+            top: 36px;
             background: #f1f5f9;
             border: none;
             padding: 4px 8px;
@@ -220,11 +223,17 @@
         .tab-content { display: none; animation: fadeIn 0.3s ease; }
         .tab-content.active { display: block; }
 
+        /* SCROLLBAR */
+        ::-webkit-scrollbar { width: 8px; height: 8px; }
+        ::-webkit-scrollbar-track { background: #1e293b; }
+        ::-webkit-scrollbar-thumb { background: #334155; border-radius: 4px; }
+        ::-webkit-scrollbar-thumb:hover { background: #475569; }
+
         @keyframes fadeIn { from { opacity: 0; transform: translateY(5px); } to { opacity: 1; transform: translateY(0); } }
 
         @media (max-width: 768px) {
             .container { grid-template-columns: 1fr; }
-            .side-panel { order: -1; } /* Mobilde kart üstte görünsün */
+            .side-panel { order: -1; } 
         }
     </style>
 </head>
@@ -245,6 +254,7 @@
             <div class="tabs">
                 <button class="tab active" data-tab="payment" data-tr="Ödeme Oluştur" data-en="New Payment">Ödeme Oluştur</button>
                 <button class="tab" data-tab="status" data-tr="İşlem Sorgula" data-en="Check Status">İşlem Sorgula</button>
+                <button class="tab" data-tab="history" data-tr="İşlem Geçmişi" data-en="History" onclick="loadHistory()">İşlem Geçmişi</button>
             </div>
 
             <div id="paymentTab" class="tab-content active">
@@ -287,6 +297,26 @@
                 </div>
                 <button class="btn-primary" onclick="checkPaymentStatus()" data-tr="Durumu Kontrol Et" data-en="Check Status">Durumu Kontrol Et</button>
             </div>
+
+            <div id="historyTab" class="tab-content">
+                <div style="overflow-x: auto; margin-bottom:10px;">
+                    <table style="width: 100%; border-collapse: collapse; font-size: 0.85rem; text-align: left;">
+                        <thead>
+                            <tr style="border-bottom: 2px solid #e2e8f0; color: #64748b;">
+                                <th style="padding: 12px 8px;">ID</th>
+                                <th style="padding: 12px 8px;">Tutar</th>
+                                <th style="padding: 12px 8px;">Durum</th>
+                                <th style="padding: 12px 8px;">Tarih</th>
+                            </tr>
+                        </thead>
+                        <tbody id="historyList">
+                            <tr><td colspan="4" style="padding:20px; text-align:center;">Yükleniyor...</td></tr>
+                        </tbody>
+                    </table>
+                </div>
+                <button class="btn-primary" onclick="loadHistory()" style="width: auto; padding: 10px 20px; font-size: 0.9rem; float:right;">🔄 Yenile</button>
+            </div>
+
         </div>
 
         <div class="side-panel">
